--- a/_posts/2016-11-04-faq.md
+++ b/_posts/2016-11-04-faq.md
@@ -54,3 +54,16 @@ $ sudo pip install --upgrade pip
 $ gdev update
 ```
 After this you can try upping your project again.
+
+## Q: My site gives me connection refused error
+
+**A: checking that service Nginx container is running**
+
+Start by doing `gdev service status` to see if Nginx container is running.
+
+If not, you can try `gdev service restart`
+
+If that does not help check `gdev service logs | grep nginx` to see if there is some error in the config.
+
+Sometimes old containers can introduce corrupting configuration to Nginx. In that case you can try `gdev service cleanup`
+ to get rid of dangling and conflicting containers.
