--- a/_posts/2016-11-04-faq.md
+++ b/_posts/2016-11-04-faq.md
@@ -57,7 +57,7 @@ After this you can try upping your project again.
 
 ## Q: My site gives me connection refused error
 
-**A: checking that service Nginx container is running**
+**A: Check that service Nginx container is running**
 
 Start by doing `gdev service status` to see if Nginx container is running.
 
