gdev service cleanup typo
`gdev service cleanup` doesn't exists use `gdev cleanup` instead. Also added a note for the method used.

--- a/_posts/2016-11-04-faq.md
+++ b/_posts/2016-11-04-faq.md
@@ -65,5 +65,5 @@ If not, you can try `gdev service restart`
 
 If that does not help check `gdev service logs | grep nginx` to see if there is some error in the config.
 
-Sometimes old containers can introduce corrupting configuration to Nginx. In that case you can try `gdev service cleanup`
- to get rid of dangling and conflicting containers.
+Sometimes old containers can introduce corrupting configuration to Nginx. In that case you can try `gdev cleanup`
+ to get rid of dangling and conflicting containers. Note! This method removes all your databases! Take database backups before running.
